--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,6 +52,7 @@ jobs:
     - name: Install Requirements
       id: install-requirements
       run: |
+        cd summaryclipper_api
         sudo apt-get update
         sudo apt-get install ca-certificates -y
         sudo apt-get install -y software-properties-common
