--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,7 +52,6 @@ jobs:
     - name: Install Requirements
       id: install-requirements
       run: |
-        cd summaryclipper/summaryclipper_api
         sudo apt-get update
         sudo apt-get install ca-certificates -y
         sudo apt-get install -y software-properties-common
@@ -69,7 +68,7 @@ jobs:
     - name: Run Unit Tests
       id: run-unit-tests
       run: |
-        python3 -m coverage run -m unittest discover --start-directory 'tests' --pattern 'test*.py'
+        python3 -m coverage run -m unittest discover --start-directory 'summaryclipper_api/tests' --pattern 'test*.py'
         python3 -m coverage xml
 
     - name: Publish Test Results
