--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,6 +49,10 @@ jobs:
     environment: production
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    steps:
     - name: Install Requirements
       id: install-requirements
       run: |
@@ -62,8 +66,6 @@ jobs:
         sudo apt-get install ffmpeg -y
         sudo apt-get clean
         sudo apt-get update
-
-        cd ../..
 
         python3 -m pip install --upgrade pip
         python3 -m pip install -r requirements.txt
