--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -76,11 +76,17 @@ jobs:
         python3 -m coverage xml
 
     - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      if: always()
+      uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        files: |
-          coverage.xml
+        filename: coverage.xml
+        badge: true
+        fail_below_min: true
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '60 80'
 
 
   deploy:
