--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -39,14 +39,25 @@ env:
   CONTAINER_NAME: summaryclipper-container            # set this to the name of the container in the
                                                       # containerDefinitions section of your task definition
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   test:
     name: Test
     runs-on: ubuntu-20.04
-    environment: production
+    environment:
+      name: test
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
     - name: Checkout
@@ -73,20 +84,19 @@ jobs:
       id: run-unit-tests
       run: |
         python3 -m coverage run -m unittest discover --start-directory 'summaryclipper_api/tests' --pattern 'test*.py'
-        python3 -m coverage xml
+        python3 -m coverage html
 
-    - name: Publish Test Results
-      uses: irongut/CodeCoverageSummary@v1.3.0
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+    - name: Upload Coverage to GitHub Pages
+      uses: actions/upload-pages-artifact@v2
       with:
-        filename: coverage.xml
-        badge: true
-        fail_below_min: false
-        format: markdown
-        hide_branch_rate: false
-        hide_complexity: true
-        indicators: true
-        output: both
-        thresholds: '60 80'
+        # Upload entire repository
+        path: 'htmlcov/index.html'
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
+
 
 
   deploy:
