--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -91,8 +91,8 @@ jobs:
     - name: Upload Coverage to GitHub Pages
       uses: actions/upload-pages-artifact@v2
       with:
-        # Upload entire repository
-        path: 'htmlcov/index.html'
+        # Upload entire folder
+        path: './htmlcov/'
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
