--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -83,7 +83,7 @@ jobs:
     - name: Run Unit Tests
       id: run-unit-tests
       run: |
-        python3 -m coverage run -m unittest discover --start-directory 'summaryclipper_api/tests' --pattern 'test*.py'
+        python3 -m coverage run --source=summaryclipper_api -m unittest discover --start-directory 'summaryclipper_api/tests' --pattern 'test*.py'
         python3 -m coverage html
 
     - name: Setup Pages
