--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,21 @@ services:
     environment:
       - "OPENAI_API_KEY=${OPENAI_API_KEY}"
       - "PORT=${PORT}"
+      - "DD_SERVICE=${DD_SERVICE}"
+      - "DD_ENV=${DD_ENV}"
+      - "DD_LOGS_INJECTION=${DD_LOGS_INJECTION}"
+  # datadog-agent:
+  #   container_name: datadog-agent
+  #   image: datadog/agent:latest
+  #   pid: host
+  #   environment:
+  #     - "DD_API_KEY=${DD_API_KEY}"
+  #     - "DD_SITE=${DD_SITE}"
+  #     - "DD_LOGS_ENABLED=${DD_LOGS_ENABLED}"
+  #     - "DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=${DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL}"
+  #     - "DD_CONTAINER_EXCLUDE_LOGS=${DD_CONTAINER_EXCLUDE_LOGS}"
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - /proc/:/host/proc/:ro
+  #     - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
