--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,23 +11,41 @@ services:
       - "${PORT}"
     restart: always
     environment:
-      - "OPENAI_API_KEY=${OPENAI_API_KEY}"
       - "PORT=${PORT}"
       - "DD_SERVICE=${DD_SERVICE}"
       - "DD_ENV=${DD_ENV}"
-      - "DD_LOGS_INJECTION=${DD_LOGS_INJECTION}"
+      - "DD_VERSION=${DD_VERSION}"
+      - "DD_OPENAI_LOGS_ENABLED=1"
+      - "DD_REMOTE_CONFIGURATION_ENABLED=${DD_REMOTE_CONFIGURATION_ENABLED}"
+      - "OPENAI_API_KEY=${OPENAI_API_KEY}"
+      - "DD_API_KEY=${DD_API_KEY}"
+      - "DD_AGENT_HOST=datadog-agent" # Should reference the service name of the Datadog agent container in this docker-compose
+      - "DD_LOGS_INJECTION=true"
+      - "DD_PROFILING_ENABLED=true"
+    labels:
+      com.datadoghq.ad.logs": "[{\"source\": \"summaryclipper\", \"service\": \"summaryclipper_api\"}]"
+      com.datadoghq.tags.service": "${DD_SERVICE}"
+      com.datadoghq.tags.env": "${DD_ENV}"
+      com.datadoghq.tags.version": "${DD_VERSION}"
   # datadog-agent:
   #   container_name: datadog-agent
-  #   image: datadog/agent:latest
-  #   pid: host
+  #   image: "gcr.io/datadoghq/agent:latest"
+  #   ports:
+  #     - "8126:8126" # APM port
+  #     - "8125:8125/udp" # DogStatsD port
   #   environment:
   #     - "DD_API_KEY=${DD_API_KEY}"
-  #     - "DD_SITE=${DD_SITE}"
-  #     - "DD_LOGS_ENABLED=${DD_LOGS_ENABLED}"
-  #     - "DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=${DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL}"
-  #     - "DD_CONTAINER_EXCLUDE_LOGS=${DD_CONTAINER_EXCLUDE_LOGS}"
+  #     - "DD_SITE=${DD_SITE}" # Default. Change to eu.datadoghq.com, us3.datadoghq.com, us5.datadoghq.com as appropriate for your org
+  #     - "DD_APM_ENABLED=true" # Enable APM
+  #     - "DD_LOGS_ENABLED=true"
+  #     - "DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true"
+  #     - "DD_CONTAINER_EXCLUDE_LOGS=name:datadog-agent"
+  #     - "DD_REMOTE_CONFIGURATION_ENABLED=${DD_REMOTE_CONFIGURATION_ENABLED}"
+  #     - "DD_PROCESS_AGENT_ENABLED=true"
+  #     - "DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true"
+  #     - "APM_NON_LOCAL_TRAFFIC=true"
   #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
   #     - /proc/:/host/proc/:ro
-  #     - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
-  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
+  #     - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+  #     - /opt/datadog-agent/run:/opt/datadog-agent/run:rw
