--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,25 +27,26 @@ services:
       com.datadoghq.tags.service": "${DD_SERVICE}"
       com.datadoghq.tags.env": "${DD_ENV}"
       com.datadoghq.tags.version": "${DD_VERSION}"
-  # datadog-agent:
-  #   container_name: datadog-agent
-  #   image: "gcr.io/datadoghq/agent:latest"
-  #   ports:
-  #     - "8126:8126" # APM port
-  #     - "8125:8125/udp" # DogStatsD port
-  #   environment:
-  #     - "DD_API_KEY=${DD_API_KEY}"
-  #     - "DD_SITE=${DD_SITE}" # Default. Change to eu.datadoghq.com, us3.datadoghq.com, us5.datadoghq.com as appropriate for your org
-  #     - "DD_APM_ENABLED=true" # Enable APM
-  #     - "DD_LOGS_ENABLED=true"
-  #     - "DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true"
-  #     - "DD_CONTAINER_EXCLUDE_LOGS=name:datadog-agent"
-  #     - "DD_REMOTE_CONFIGURATION_ENABLED=${DD_REMOTE_CONFIGURATION_ENABLED}"
-  #     - "DD_PROCESS_AGENT_ENABLED=true"
-  #     - "DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true"
-  #     - "APM_NON_LOCAL_TRAFFIC=true"
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
-  #     - /proc/:/host/proc/:ro
-  #     - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
-  #     - /opt/datadog-agent/run:/opt/datadog-agent/run:rw
+
+  datadog-agent:
+    container_name: datadog-agent
+    image: "gcr.io/datadoghq/agent:latest"
+    ports:
+      - "8126:8126" # APM port
+      - "8125:8125/udp" # DogStatsD port
+    environment:
+      - "DD_API_KEY=${DD_API_KEY}"
+      - "DD_SITE=${DD_SITE}" # Default. Change to eu.datadoghq.com, us3.datadoghq.com, us5.datadoghq.com as appropriate for your org
+      - "DD_APM_ENABLED=true" # Enable APM
+      - "DD_LOGS_ENABLED=true"
+      - "DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true"
+      - "DD_CONTAINER_EXCLUDE_LOGS=name:datadog-agent"
+      - "DD_REMOTE_CONFIGURATION_ENABLED=${DD_REMOTE_CONFIGURATION_ENABLED}"
+      - "DD_PROCESS_AGENT_ENABLED=true"
+      - "DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true"
+      - "APM_NON_LOCAL_TRAFFIC=true"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc/:/host/proc/:ro
+      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+      - /opt/datadog-agent/run:/opt/datadog-agent/run:rw
